Release 0.2-0:
  * Rewrite vignette.
  * Fix environment bug (WCC).

Release 0.1-1:
  * Switch to depending on remoter.
  * add pbdserver().
  * Fix getPass() bug on pbdserver().

Release 0.1-0:
  * Added vignette.
  * Fixed to work on Windows (wcc).
  * Develop basic client/server over ZMQ.
  * Rename pbdinline to pbdCS.