@@ -5,7 +5,6 @@ export(pbdRscript)
 export(pbdSpawn)
 export(pbdclient)
 export(pbdserver)
-import(assertthat)
 import(pbdMPI)
 import(remoter)
 importFrom(pbdZMQ,address)
