@@ -1,6 +1,7 @@
 Release 0.2-0:
   * Rewrite vignette.
   * Fix environment bug (WCC).
+  * Drop assertthat for reactor.
 
 Release 0.1-1:
   * Switch to depending on remoter.
